@@ -181,6 +181,14 @@ See <<configuration>> for all available configuration options.
 NOTE: This option cannot be used in conjunction with `--pid` and `--config`
 --
 
+*-w, --without-emulated-attach*::
++
+--
+Disables using emulated attach feature provided by Byte Buddy, this should be used as a workaround on some JDK/JREs
+when runtime attachment fails.
+--
+
+
 
 [float]
 [[setup-attach-cli-docker]]
